--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcsh 'Religion'
 - !lcc 'BL'
 - !lcsh 'Magic'
+- GITenberg
 title: 'The Golden Bough: A Study in Magic and Religion (Third Edition, Vol. 07 of
   12)'
 url: http://www.gutenberg.org/ebooks/42067
